--- a/public/css/style.css
+++ b/public/css/style.css
@@ -4,3 +4,10 @@ ul.top-list {
 .bg-danger {
     background-color:#f2dede;
 }
+.bg-success {
+    background-color:#dff0d8;
+}
+
+.bg-warning {
+    background-color:#fcf8e3;
+}
